--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
         <title>Beverage - task runner for PHP</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/sandstone/bootstrap.min.css" media="screen">
-        <link rel="stylesheet" href="/css/style.css" media="screen">
+        <link rel="stylesheet" href="css/style.css" media="screen">
     </head>
     <body>
 
@@ -24,8 +24,9 @@
                 <div class="col-md-5 col-md-offset-1"><h2>Setup</h2>
                 <p>To install and setup Beverage, just follow the <a href="https://github.com/awakenweb/beverage">README</a></p>
                 </div>
-                
+
                 <div class="col-md-5"><h2>Official modules</h2>
+
                 </div>
             </div>
         </div>
