Modified list of existing and upcoming modules

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
         <div class="container-fluid content">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    <h1>You know Diet Coke ? Discover Diet Gulp!</h1>
-                    <p class="lead">Beverage is a port of Gulp.js to PHP.</p>
-                    <h2>Why "yet-another-Gulp-clone"?</h2>
-                    <p class="lead">I personnaly love Gulp, but as a Windows user, some Unix dependecies are a hassle to install.</p>
-                    <p>Plus, I find the way NPM manages dependencie is pure chaos. Node_Modules folder alone represents 80% of the size of most of my projets.</p>
-                    <p>The goal of Beverage is to give the power of Gulp and tis ease of use to PHP projects as a Composer package.</p>
+                    <h1>Beverage is a port of Gulp.js to PHP.</h1>
+                    <p class="lead">I personnaly love Gulp, but as a Windows user, most Unix dependecies are a hassle to install.</p>
+                    <p>Plus, I find the way NPM manages dependencie is pure chaos. <code>node_nodules</code> folder alone represents 80% of the size of most of my projets.</p>
+                    <p>The goal of Beverage is to give the power of Gulp and its ease of use to PHP projects as a Composer package, when Node.js is not an option.</p>
                 </div>
             </div>
 
@@ -53,16 +51,28 @@
                             <p class="lead">JS minifier and combiner <span class="label label-success">Included!</span></p>
                         </li>
                         <li>
-                            <p class="lead">Scss and Compass compiler</p>
+                            <p class="lead"><a href="https://github.com/awakenweb/beverage-scss">Scss and Compass compiler</a></p>
                         </li>
                         <li>
-                            <p class="lead">Images processing (optimize, watermark, resize, ...) <span class="label label-default">In development</span></p>
+                            <p class="lead"><a href="https://github.com/awakenweb/beverage-less">Less compiler</a></p>
+                        </li>
+                        <li>
+                            <p class="lead">Images optimizer <span class="label label-default">In development</span></p>
+                        </li>
+                        <li>
+                            <p class="lead">Images resizer <span class="label label-default">In development</span></p>
+                        </li>
+                        <li>
+                            <p class="lead">Images wartermarker <span class="label label-default">In development</span></p>
                         </li>
                         <li>
                             <p class="lead">Assets versionning <span class="label label-default">In development</span></p>
                         </li>
                         <li>
-                            <p class="lead">Assets reloader <span class="label label-default">In development</span></p>
+                            <p class="lead">Directories cleaner <span class="label label-default">In development</span></p>
+                        </li>
+                        <li>
+                            <p class="lead">Simple text replace <span class="label label-default">In development</span></p>
                         </li>
                     </ul>
                 </div>
