--- a/index.html
+++ b/index.html
@@ -38,41 +38,52 @@
         "awakenweb/beverage" : "dev-master"
     }
 }</code></pre>
-                    <p class="lead">Then follow the instructions of the <a href="https://github.com/awakenweb/beverage">github repository README</a></p>
+                    <p>Run <code>composer install --prefer-dist</code> to install dependencies</p>
+                    <p>Run <code>vendor/bin/beverage beverage:init</code> command to get a boilerplate <code>drinkmenu.php</code> file</p>
+                    <p>Then follow the instructions of the <a href="https://github.com/awakenweb/beverage">github repository README</a></p>
+
+                    <hr>
+
+                    <h2>Extend</h2>
+
+                    <p>To create your own modules, commands and watcher listeners, follow the instructions in <a href="https://github.com/awakenweb/beverage/blob/master/EXTEND.md">the EXTEND.md file</a></p>
                 </div>
 
                 <div class="col-md-5"><h2>Official modules</h2>
                     <hr>
                     <ul>
                         <li>
-                            <p class="lead">CSS minifier and combiner <span class="label label-success">Included!</span></p>
+                            <p>CSS minifier and combiner <span class="label label-success">Included!</span></p>
                         </li>
                         <li>
-                            <p class="lead">JS minifier and combiner <span class="label label-success">Included!</span></p>
+                            <p>JS minifier and combiner <span class="label label-success">Included!</span></p>
                         </li>
                         <li>
-                            <p class="lead"><a href="https://github.com/awakenweb/beverage-scss">Scss and Compass compiler</a></p>
+                            <p><a href="https://github.com/awakenweb/beverage-scss">Scss and Compass compiler</a></p>
                         </li>
                         <li>
-                            <p class="lead"><a href="https://github.com/awakenweb/beverage-less">Less compiler</a></p>
+                            <p><a href="https://github.com/awakenweb/beverage-less">Less compiler</a></p>
                         </li>
                         <li>
-                            <p class="lead">Images optimizer <span class="label label-default">In development</span></p>
+                            <p>Images optimizer <span class="label label-default">In development</span></p>
                         </li>
                         <li>
-                            <p class="lead">Images resizer <span class="label label-default">In development</span></p>
+                            <p>Images resizer <span class="label label-default">In development</span></p>
                         </li>
                         <li>
-                            <p class="lead">Images wartermarker <span class="label label-default">In development</span></p>
+                            <p>Images wartermarker <span class="label label-default">In development</span></p>
                         </li>
                         <li>
-                            <p class="lead">Assets versionning <span class="label label-default">In development</span></p>
+                            <p>Assets versionning <span class="label label-default">In development</span></p>
                         </li>
                         <li>
-                            <p class="lead">Directories cleaner <span class="label label-default">In development</span></p>
+                            <p>Directories cleaner <span class="label label-default">In development</span></p>
                         </li>
                         <li>
-                            <p class="lead">Simple text replace <span class="label label-default">In development</span></p>
+                            <p>Simple text replace <span class="label label-default">In development</span></p>
+                        </li>
+                        <li>
+                            <p>PHP CS Fixer <span class="label label-default">In development</span></p>
                         </li>
                     </ul>
                 </div>
