Link to Beverage-cleaner module

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                             <p>Stylus compiler <span class="label label-default">In development</span></p>
                         </li>
                         <li>
+                            <p><a href="https://github.com/awakenweb/beverage-cleaner">Directories cleaner</a></p>
+                        </li>
+                        <li>
                             <p>Images optimizer, resizer, and wartermarker <span class="label label-default">In development</span></p>
                         </li>
                         <li>
                             <p>Assets versionning <span class="label label-default">In development</span></p>
-                        </li>
-                        <li>
-                            <p>Directories cleaner <span class="label label-default">In development</span></p>
                         </li>
                         <li>
                             <p>Simple text replace <span class="label label-default">In development</span></p>
