--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </header>
 
-        <div class="container-fluid content">
+        <div class="container content">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <h1>Beverage is a port of Gulp.js to PHP.</h1>
