--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
                         <hr>
                         <dt>Is Beverage asynchronous?</dt>
                         <dd>One of the strengths of Gulp, compared to Grunt, is its ability to run tasks in parallel.<br>
-                            Beverage is not asynchronous for now. I plan to add this functionnality in a near future (no ETA yet) and allow to run tasks in parallel to speed up the whole process.<br>
-                            I also want to provide it in a cross-platform way. As a Windows user, I don't want to need a virtual machine only to compile my project assets.</dd>
+                            Beverage is not asynchronous for now.<br>
+                            I plan to add this functionnality at some point in the future, but it's not on the priority list. As a Windows user, I don't want to install some Linux virtual machine just to run some basic tasks.<br>
+                            So I want to make sure the solution I choose is totally cross-platform.</dd>
                         <hr>
-                        <dt></dt>
-                        <dd></dd>
                     </dl>
                 </div>
             </div>
